fixed main page gap

--- a/src/assets/scss/blocks/views/main-page.scss
+++ b/src/assets/scss/blocks/views/main-page.scss
@@ -1,6 +1,8 @@
 .main-page-block {
   padding: 100px 15.6vw 50px 15.6vw;
   display: flex;
+  justify-content: space-between;
+  gap: 15px;
 
   .left-block {
     width: 14.17vw;
@@ -12,8 +14,7 @@
 
   .middle-block {
     width: 39.58vw;
-    margin-left: 15px;
-    margin-right: 15px;
+
     .news {
       width: fit-content;
       margin-left: 26px;
